# pocket-universe

./: .gitignore  LICENSE  README.md  pyproject.toml
archived/pocket_web/: README.md  pubspec.yaml
archived/pocket_web/test/: widget_test.dart
archived/pocket_web/web/: index.html  manifest.json
pocket_app/: README.md  pubspec.yaml
pocket_app/lib/: api.dart  bestiary_page.dart  main.dart  world_page.dart
pocket_app/test/: widget_test.dart
pocket_universe/: __init__.py  api.py  bestiary.py  cli.py  climate.py  economy.py  format.py  generator.py  map_viz.py
pocket_web/: README.md
pocket_web/lib/: main.dart
pocket_web/test/: widget_test.dart
zine/: ember.html
