[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pocket-universe"
version = "0.1.0"
description = "Procedural pocket universe generator — worlds from a single seed"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
pocket-universe = "pocket_universe.cli:main"
